# image2biomass

./: LICENSE  Makefile  README.md  pyproject.toml
docs/: hyperparameter-tuning.md  mkdocs.yml  quick-reference.md  workflow-complete.md
docs/docs/: index.md
image2biomass/: __init__.py  config.py  dataset.py  features.py  metrics.py  plots.py
image2biomass/features/: __init__.py  build_features.py  dinov2_hf.py
image2biomass/modeling/: cross_validate.py  evaluate.py  predict.py  train.py  tune_hyperparameters.py
image2biomass/modeling/models/: __init__.py  base.py  random_forest_regressor.py  registry.py  sklearn_gboost_regressor.py  xgboost_regressor.py
models/: model.json  model.pkl  sklearn_gboost_fold0.pkl  sklearn_gboost_fold1.pkl  sklearn_gboost_fold2.pkl  sklearn_gboost_fold3.pkl  sklearn_gboost_fold4.pkl  sklearn_gboost_fold5.pkl  sklearn_gboost_fold6.pkl  sklearn_gboost_month_fold0.pkl  sklearn_random_forest_fold0.pkl  sklearn_random_forest_month_fold0.pkl  xgboost_fold0.pkl  xgboost_fold1.pkl  xgboost_fold2.pkl  xgboost_fold3.pkl  xgboost_fold4.pkl  xgboost_fold5.pkl  xgboost_fold6.pkl  xgboost_month_fold0.pkl  xgboost_tuned.pkl  xgboost_tuned_optuna_study.csv
notebooks/: 001_EDA.ipynb
tests/: test_tuning.py
